# FLP-Rust-GSP

./: Cargo.toml
.github/workflows/: ci.yml
src/: interpreter.rs  lib.rs  parser.rs
src/interpreter/: evaluate.rs  hasura.rs  mysql.rs  postgres.rs  sqlite.rs
src/parser/: atom.rs  comparison.rs  relation.rs
tests/: common.rs  evaluate.rs  hasura.rs  mysql.rs  postgres.rs  sqlite.rs
