[package]
name = "flp-gsp"
version = "1.1.0"
authors = ["Hakukano <hakukano@flp.zone>"]
edition = "2024"
description = "General search parser"
repository = "https://github.com/Hakukano/FLP-GSP"
documentation = "https://docs.rs/flp-gsp"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
ipnetwork = { version = "0.21", optional = true }
nom = "8.0"
regex = "1.11"
rust_decimal = { version = "1.37", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
uuid = { version = "1.16", optional = true }
wildmatch = { version = "2.4", optional = true }

[features]
default = []
evaluate = ["wildmatch"]
mysql = ["chrono", "rust_decimal", "serde_json"]
postgres = [
  "bit-vec",
  "chrono",
  "ipnetwork",
  "rust_decimal",
  "serde_json",
  "uuid",
]
sqlite = ["chrono", "uuid"]
hasura = []
