[package]
name = "flp-gsp"
version = "2.0.0"
authors = ["Hakukaze Shikano <hakukano@flp.zone>"]
edition = "2024"
description = "General search parser"
repository = "https://github.com/Hakukano/FLP-Rust-GSP"
documentation = "https://docs.rs/flp-gsp"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
bit-vec = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
ipnetwork = { version = "0.21", optional = true }
nom = "8.0"
regex = "1.12"
rust_decimal = { version = "1.40", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
uuid = { version = "1.20", optional = true }
wildmatch = { version = "2.6", optional = true }

[features]
default = []
evaluate = ["wildmatch"]
mysql = ["chrono", "rust_decimal", "serde_json"]
postgres = [
  "bit-vec",
  "chrono",
  "ipnetwork",
  "rust_decimal",
  "serde_json",
  "uuid",
]
sqlite = ["chrono", "uuid"]
hasura = []
